--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	
+<div class="hero">
+	<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+</div>
+	<h1><span>Welcome to my Printerest clone</span></h1>
+<p>Discover new inspirations and save your favourite ideas</p>
+	<button id="button" type="button">Explore Now</button>
+	
 </body>
 
 </html>
